# Landseer

./: .gitignore  .gitmodules  README.md  all_pipeline_combinations.csv  changes.txt  config.json  config_model.py  defense.py  dockerfile  landseer.py  main.py  outlier_in_changes.txt  pyproject.toml  requirements.txt  run_all.sh  staging.py  test.sh  test_fin.sh
.github/workflows/: build-evaluators.yml
configs/: tools.yaml
configs/attack/: fairness_config.yaml  test_config_1.yaml  test_config_2.yaml
configs/configs_by_in_tool/: pipeline_with_in_dp_fixed.yaml  pipeline_with_in_teaching.yaml  pipeline_with_in_trades.yaml  pipeline_with_watermarking.yaml
configs/configs_by_in_tool_latest/: pipeline_with_in_dp_fixed.yaml  pipeline_with_in_teaching.yaml  pipeline_with_in_trades.yaml  pipeline_with_watermarking.yaml
configs/model/: config_model.py  config_model_combined.py  config_model_dp_cnn.py  config_model_resnet.py  config_model_resnet20_tf.py  config_model_resnet32.py  config_model_squeezenet.py  config_model_teaching.py  config_model_trades.py
configs/pipeline/: dnn_watermarking.yaml  dnn_watermarking_v2.yaml  fairness.yaml  test_config.yaml  test_config_1.yaml  test_config_2.yaml  test_config_fin.yaml  trades.yaml  watermarknn.yaml  watermarknn_tensorflow.yaml
configs_by_in_tool_latest/: pipeline_with_in_dp_fixed.yaml  pipeline_with_in_teaching.yaml  pipeline_with_in_trades.yaml  pipeline_with_watermarking.yaml
docs/: DATABASE_SETUP.md
helper_scripts/: analyze_deviation.py  cleanup_before_run.sh  cleanup_cache.sh  cleanup_docker.sh  cleanup_workspaces.sh  disk_usage.sh  emergency_fix.py  quick_cleanup.sh  reset_pipeline.sh  run_comb_020_multiple.sh  run_deviation_test.sh
in/: Dockerfile  defense.py  dockerfile  loss.py  normal.py
in/data/: cifar.py
in_dp/: Dockerfile  defense.py
ml_defense_pipeline/: combinations.py  config.py  config_model.py  dataset_manager.py  docker_manager.py  docker_runner.sh  logging_manager.py  main.py  main_pipeline.py  main_pipeline.py.bak  model_evaluator.py  pipeline.py  pipeline_evaluator.py  requirements.txt  staging.py  test.sh  tool_runner.py
ml_defense_pipeline/configs/: default_config.json  test_config.json  test_config.yaml
ml_defense_pipeline/dataset_handler/: __init__.py  manager.py  schema.py
ml_defense_pipeline/dataset_preprocess/: cifar-10_loader.py
ml_defense_pipeline/docker_handler/: __init__.py  manager.py  schema.py
ml_defense_pipeline/evaluator/: __init__.py  attack_handler.py  model_evaluator.py
ml_defense_pipeline/pipeline/: __init__.py  runner.py  schema.py
ml_defense_pipeline/scripts/: during_training_model_h5_preprocessor.py  post_training_model_h5_postprocessor.py  pre_training_dataset_h5_postprocessor.py  pre_training_dataset_h5_preprocessor.py
ml_defense_pipeline/tools/: __init__.py  runner.py  schema.py
post/: Dockerfile  defense.py
pre/: Dockerfile  defense.py  feature_squeeze_celebA.py  normal.py
scripts/: adapter_mat_to_img.py  adapter_mat_to_pickle.py  download_dataset.sh
src/: main.py
src/backend/: __init__.py  api.py  (+3 more)
xgbod/: filter_anomalies.py  output_filter.py
(+239 files in other folders)
