[project]
name = "landseer_pipeline"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "*", from = "src" }]
requires-python = ">=3.11"

[tool.poetry.dependencies]
torch = { version = ">=2.4.1,<3.0.0", source = "pytorch-cu128" }
python = ">=3.11"
numpy = ">=2.2.6,<3.0.0"
scipy = ">=1.15.3,<2.0.0"
pyyaml = ">=6.0.2,<7.0.0"
pydantic = ">=2.11.5,<3.0.0"
h5py = ">=3.13.0,<4.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
colorlog = ">=6.9.0,<7.0.0"
docker = "<=7.1.0"
torchattacks = ">=3.5.1,<4.0.0"
filelock = "^3.18.0"
pynvml = "^12.0.0"
colorlogs = "^0.1"

[tool.poetry.scripts]
landseer = "landseer_pipeline.main:main"

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
