[tool.poetry]
name = "landseer"
version = "0.1.0"
description = "Landseer is a framework for combining and analysing multiple trustworthy ML tools"
authors = ["Rosemary Agbozo <agbozorosemary217@gmail.com>"]
readme = "README.md"
packages = [
    { include = "landseer_pipeline", from = "src" },
    { include = "landseer_ui", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
torch = { version = ">=2.4.1,<3.0.0", source = "pytorch-cu128" }
numpy = ">=2.2.6,<3.0.0"
scipy = ">=1.15.3,<2.0.0"
pyyaml = ">=6.0.2,<7.0.0"
pydantic = ">=2.11.5,<3.0.0"
h5py = ">=3.13.0,<4.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
colorlog = ">=6.9.0,<7.0.0"
docker = "<=7.1.0"
torchattacks = ">=3.5.1,<4.0.0"
filelock = "^3.18.0"
pynvml = "^12.0.0"
colorlogs = "^0.1"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
# Database dependencies
sqlalchemy = ">=2.0.0,<3.0.0"
mysql-connector-python = ">=8.0.0,<9.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
fairlearn = ">=0.7.0,<1.0.0"

[tool.poetry.scripts]
landseer = "landseer_pipeline.main:main"

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
